@@ -17,7 +17,7 @@ kerberos_setup
 if [ $? != 0 ] ; then
     skip_all "Kerberos tests not configured"
 else
-    plan 2
+    plan 6
 fi
 remctl="$BUILD/../client/remctl"
 if [ ! -x "$remctl" ] ; then
@@ -30,6 +30,14 @@ ok_program "file descriptors closed properly on server" 0 "Okay" \
     "$remctl" -s "$principal" -p 14373 localhost test closed
 ok_program "server returns despite background process" 0 "Parent" \
     "$remctl" -s "$principal" -p 14373 localhost test background
+ok_program "matching and argv passing for EMPTY" 0 "0" \
+    "$remctl" -s "$principal" -p 14373 localhost empty
+ok_program "...but the empty argument does not match" 255 "Unknown command" \
+    "$remctl" -s "$principal" -p 14373 localhost empty ''
+ok_program "wildcard matching for the command" 0 "hello world" \
+    "$remctl" -s "$principal" -p 14373 localhost foo bar
+ok_program "...but only matches that subcommand" 255 "Unknown command" \
+    "$remctl" -s "$principal" -p 14373 localhost foo baz
 
 # Clean up.
 if [ -f "$BUILD/data/cmd-background.pid" ] ; then
